--- a/Admin_Vuelos/Site.Master
+++ b/Admin_Vuelos/Site.Master
@@ -50,6 +50,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="Default.aspx">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Reserva.aspx">Reserva</a>
+                    </li>
                 </ul>
             </div>
         </nav>
